--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.0",
     "ethereum-waffle": "^2.4.1",
-    "ethers": "4.0.46"
+    "ethers": "4.0.46",
+    "solady": "^0.0.104",
+    "chai": "^4.2.0"
   }
 }
