--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/EduardPershyn/uniswapV2_rebuild#readme",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.0",
+    "chai": "^4.2.0",
     "ethereum-waffle": "^2.4.1",
     "ethers": "4.0.46",
+    "hardhat": "^2.17.0",
     "solady": "^0.0.104",
-    "chai": "^4.2.0"
+    "prettier": "^1.19.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2"
   }
 }
